--- a/radioactive_elements_app/index.html
+++ b/radioactive_elements_app/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="/radioactive_elements_app/public/radioactive_logo_white.png" />
+    <link rel="icon" type="image/png" href="/radioactive_logo_black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Распад радиоактивных элементов</title>
   </head>
